infra/clusters/k8s/apps/pullini/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pullini
  namespace: homelab
  labels:
    app: pullini
spec:
  selector:
    app: pullini
  ports:
    - name: http
      port: 80
      targetPort: http
